--- a/src/main/resources/com/fxmlrubic/hello-view.fxml
+++ b/src/main/resources/com/fxmlrubic/hello-view.fxml
@@ -1,16 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.fxmlrubic.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<BorderPane prefHeight="261.0" prefWidth="467.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fxmlrubic.controller.GameController">
+   <center>
+      <Group fx:id="mainScene" />
+   </center>
+   <top>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" onAction="#rotateR" prefHeight="30.0" prefWidth="30.0" text="R" />
+            <Button mnemonicParsing="false" onAction="#rotateL" prefHeight="30.0" prefWidth="30.0" text="L" />
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotateU" prefHeight="30.0" prefWidth="30.0" text="U" />
+            <Button layoutX="130.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotateD" prefHeight="30.0" prefWidth="30.0" text="D" />
+            <Button layoutX="110.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotateF" prefHeight="30.0" prefWidth="30.0" text="F" />
+            <Button layoutX="130.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotateB" prefHeight="30.0" prefWidth="30.0" text="B" />
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </HBox>
+   </top>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" onAction="#rotate_r" prefHeight="30.0" prefWidth="30.0" text="r" />
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotate_l" prefHeight="30.0" prefWidth="30.0" text="l" />
+            <Button layoutX="70.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotate_u" prefHeight="30.0" prefWidth="30.0" text="u" />
+            <Button layoutX="130.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotate_d" prefHeight="30.0" prefWidth="30.0" text="d" />
+            <Button layoutX="190.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotate_f" prefHeight="30.0" prefWidth="30.0" text="f" />
+            <Button layoutX="250.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotate_b" prefHeight="30.0" prefWidth="30.0" text="b" />
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </HBox>
+   </bottom>
+   <left>
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <children>
+            <Button mnemonicParsing="false" onAction="#disBuildOnAction" prefWidth="100.0" text="Breake" />
+            <Button layoutX="20.0" layoutY="20.0" mnemonicParsing="false" onAction="#buildOnAction" prefWidth="100.0" text="Build" />
+         </children>
+      </VBox>
+   </left>
+</BorderPane>
