--- a/src/main/resources/com/fxmlrubic/gameView.fxml
+++ b/src/main/resources/com/fxmlrubic/gameView.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <BorderPane prefHeight="261.0" prefWidth="467.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fxmlrubic.controller.GameController">
    <center>
       <Group fx:id="mainScene" />
@@ -15,12 +14,12 @@
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
-         <Button mnemonicParsing="false" onAction="#rotateR" prefHeight="30.0" prefWidth="30.0" text="R" />
-         <Button mnemonicParsing="false" onAction="#rotateL" prefHeight="30.0" prefWidth="30.0" text="L" />
-         <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotateU" prefHeight="30.0" prefWidth="30.0" text="U" />
-         <Button layoutX="130.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotateD" prefHeight="30.0" prefWidth="30.0" text="D" />
-         <Button layoutX="110.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotateF" prefHeight="30.0" prefWidth="30.0" text="F" />
-         <Button layoutX="130.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotateB" prefHeight="30.0" prefWidth="30.0" text="B" />
+         <Button focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="R" />
+         <Button focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="L" />
+         <Button focusTraversable="false" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="U" />
+         <Button focusTraversable="false" layoutX="130.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="D" />
+         <Button focusTraversable="false" layoutX="110.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="F" />
+         <Button focusTraversable="false" layoutX="130.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="B" />
       </HBox>
    </top>
    <bottom>
@@ -28,12 +27,12 @@
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
-         <Button mnemonicParsing="false" onAction="#rotate_r" prefHeight="30.0" prefWidth="30.0" text="r" />
-         <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotate_l" prefHeight="30.0" prefWidth="30.0" text="l" />
-         <Button layoutX="70.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotate_u" prefHeight="30.0" prefWidth="30.0" text="u" />
-         <Button layoutX="130.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotate_d" prefHeight="30.0" prefWidth="30.0" text="d" />
-         <Button layoutX="190.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotate_f" prefHeight="30.0" prefWidth="30.0" text="f" />
-         <Button layoutX="250.0" layoutY="10.0" mnemonicParsing="false" onAction="#rotate_b" prefHeight="30.0" prefWidth="30.0" text="b" />
+         <Button focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="r" />
+         <Button focusTraversable="false" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="l" />
+         <Button focusTraversable="false" layoutX="70.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="u" />
+         <Button focusTraversable="false" layoutX="130.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="d" />
+         <Button focusTraversable="false" layoutX="190.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="f" />
+         <Button focusTraversable="false" layoutX="250.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="b" />
       </HBox>
    </bottom>
    <left>
@@ -41,8 +40,8 @@
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
-         <Button mnemonicParsing="false" onAction="#disBuildOnAction" prefWidth="100.0" text="Breake" />
-         <Button layoutX="20.0" layoutY="20.0" mnemonicParsing="false" onAction="#buildOnAction" prefWidth="100.0" text="Build" />
+         <Button focusTraversable="false" mnemonicParsing="false" onAction="#disBuildOnAction" prefWidth="100.0" text="Breake" />
+         <Button focusTraversable="false" layoutX="20.0" layoutY="20.0" mnemonicParsing="false" onAction="#buildOnAction" prefWidth="100.0" text="Build" />
       </VBox>
    </left>
 </BorderPane>
