--- a/src/main/resources/com/fxmlrubic/gameView.fxml
+++ b/src/main/resources/com/fxmlrubic/gameView.fxml
@@ -2,46 +2,58 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="261.0" prefWidth="467.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fxmlrubic.controller.GameController">
+<?import com.jfoenix.controls.JFXButton?>
+<BorderPane prefHeight="451.0" prefWidth="524.0" style="-fx-background-color: #262626;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fxmlrubic.controller.GameController">
    <center>
       <Group fx:id="mainScene" />
    </center>
-   <top>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
-         <padding>
+   <right>
+      <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-         <Button focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="R" />
-         <Button focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="L" />
-         <Button focusTraversable="false" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="U" />
-         <Button focusTraversable="false" layoutX="130.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="D" />
-         <Button focusTraversable="false" layoutX="110.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="F" />
-         <Button focusTraversable="false" layoutX="130.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="B" />
+         </BorderPane.margin>
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #606060;"
+             text="R" />
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #606060;"
+             text="L" />
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #606060;"
+             text="U" />
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #606060;"
+             text="D" />
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #606060;"
+             text="F" />
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #606060;"
+             text="B" />
+      </VBox>
+   </right>
+   <top>
+      <HBox alignment="TOP_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#disBuildOnAction" prefWidth="100.0" style="-fx-background-color: #606060;" text="Breake" />
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#buildOnAction" prefWidth="100.0" style="-fx-background-color: #606060;" text="Build" />
       </HBox>
    </top>
-   <bottom>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-         <Button focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="r" />
-         <Button focusTraversable="false" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="l" />
-         <Button focusTraversable="false" layoutX="70.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="u" />
-         <Button focusTraversable="false" layoutX="130.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="d" />
-         <Button focusTraversable="false" layoutX="190.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="f" />
-         <Button focusTraversable="false" layoutX="250.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" text="b" />
-      </HBox>
-   </bottom>
    <left>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
-         <padding>
+      <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-         <Button focusTraversable="false" mnemonicParsing="false" onAction="#disBuildOnAction" prefWidth="100.0" text="Breake" />
-         <Button focusTraversable="false" layoutX="20.0" layoutY="20.0" mnemonicParsing="false" onAction="#buildOnAction" prefWidth="100.0" text="Build" />
+         </BorderPane.margin>
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #606060;"
+             text="r" />
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #606060;"
+             text="l" />
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #606060;"
+             text="u" />
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #606060;"
+             text="d" />
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #606060;"
+             text="f" />
+         <JFXButton buttonType="FLAT" textFill="azure" focusTraversable="false" mnemonicParsing="false" onAction="#onRotateButtonAction" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #606060;"
+             text="b" />
       </VBox>
    </left>
 </BorderPane>
